frontend/src/login/LoginPage.css
#login-form {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  height: 100vh;
}

#login-form-container {
  display: flex;
  flex-direction: column;
  width: 80%;
  min-width: 20rem;
  max-width: 30rem;
  margin: auto;
  gap: 1rem;
}

